# agent-usage-stats

./: .env.example  .gitignore  .npmrc  .npmrc.bak  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  agent-usage.config.example.json  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pricing.example.json  scanner.md  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
Formula/: agent-usage.rb
apps/cli/: README.md  package.json
apps/cli/scripts/: bundle-web.mjs
apps/cli/src/: index.ts  ui.ts  web-app.ts
apps/cli/tests/: cli-json-contracts.test.ts  cli.test.ts
apps/desktop/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/scripts/: make-icon.mjs
apps/desktop/src/: App.tsx  index.css  index.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  menu.rs  sidecar.rs
apps/desktop/src/components/: app-shell.tsx  boot-screen.tsx  command-palette.tsx  provider-badge.tsx  scan-button.tsx  sidebar.tsx  theme-toggle.tsx  titlebar.tsx  topbar.tsx
apps/desktop/src/lib/: api.ts  format.ts  stats-params.ts  tauri-events.ts  use-auto-scan.ts  use-filters.ts  use-query.ts
apps/desktop/tests/: api.test.ts
apps/web/: agent-usage.config.json  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
apps/web/tests/: api-queries.test.ts  format.test.ts  provider-theme.test.ts
docs/: HOMEBREW.md  ai-cli-token-parsers.md
(+78 files in other folders)
