[package]
name = "agent-usage-desktop"
version = "0.1.0"
description = "Local-first AI session usage analyzer — desktop shell"
authors = ["Agent Usage Stats Contributors"]
edition = "2021"

[lib]
name = "agent_usage_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
