[package]
name = "agent-usage-desktop"
version = "0.1.0"
description = "Local-first AI usage analyzer — Tauri desktop shell"
authors = ["Agent Usage Stats"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "agent_usage_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
# Used to reap the sidecar's whole process group (kills the orphaned next-server).
libc = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
